--- a/style.html
+++ b/style.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8" />
     <title>Site for cats</title>
+    <link href="style.css" type="stylesheet">
 </head>
 <body>
- <h1>This is website for cats</h1>   
+ <p>This is website for cats</p>
+ <div>*</div>   
  <img src="cat.png" alt="a cute cat">
 </body>
 </html>
