--- a/style.html
+++ b/style.html
@@ -9,5 +9,7 @@
  <p>This is website for cats</p>
  <div>*</div>   
  <img src="cat.png" alt="a cute cat">
+ <div></div>
+ <span></span>
 </body>
 </html>
